<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.london.MainActivity">

    <ImageView
        android:id="@+id/activiy_main_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/london"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/london"
        android:layout_alignBottom="@id/activiy_main_header"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/text_header_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activiy_main_header"
        android:layout_above="@id/activity_main_learn_more"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/founded_text"
                android:textColor="@color/colorTitleText"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_founded_text"
                android:textColor="@color/colorInfoText"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/text_margin_left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population_text"
                android:textColor="@color/colorTitleText"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_population_text"
                android:textColor="@color/colorInfoText"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/text_margin_left"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_text"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_details_text"
            android:textColor="@color/colorInfoText"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_main_learn_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/info_button_text"/>
</RelativeLayout>
